--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bitflags = "2.9.1"
+noise = "0.9.0"
+rand = "0.9.1"
 sdl2 = { version = "0.37.0", features = ["gfx", "ttf"] }
