--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 bitflags = "2.9.1"
+glam = "0.30.5"
+hecs = "0.10.5"
 noise = "0.9.0"
 rand = "0.9.1"
 sdl2 = { version = "0.37.0", features = ["gfx", "ttf"] }
